[project]
name = "airbread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "air[standard]>=0.33.1",
    "mixedbread>=0.32.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
    "typer>=0.19.2",
]
